# rust-aws

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
src/: main.rs
