[package]
name = "smiirl-counter"
version = "0.1.0"
authors = ["Cameron Pickett <pickett@fb.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.91"
serde_json = "1.0.39"
serde_derive = "1.0.91"
simple-error = "0.1.13"

[[bin]]
name = "bootstrap"
path = "src/main.rs"